<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView_Personaje"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/manzana" />

    <EditText
        android:id="@+id/txt_Nombre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView_Personaje"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/et_Nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/et_Nombre"
        android:textColor="@color/ic_launcher_background"
        android:textColorHint="@color/ic_launcher_background"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txt_Nombre"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/fondoboton"
        android:onClick="Jugar"
        android:text="@string/Button"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_BestScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="-16dp"
        android:layout_marginRight="-16dp"
        android:background="@drawable/fondoet"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:textColor="@color/ic_launcher_background"
        android:textSize="18sp" />
</RelativeLayout>